--- a/css/index.css
+++ b/css/index.css
@@ -100,13 +100,19 @@ a.link__page:hover {
 	color: white;
 }
 
-.all__body {
-	/* border: solid red 1px; */
+.all__body__index {
+	border: solid red 1px;
+	/* background-image: url("../image/etoile.jpg");
+	background-repeat: repeat-x;
+	background-position: center;
+	background-size: cover;
+	height: 100%; */
 	width: 100%;
-	/* height: 100%; */
+	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
+	justify-content: center;
+	align-items: center;
 }
 .smith__image {
 	/* border: solid blue 1px; */
@@ -117,6 +123,7 @@ a.link__page:hover {
 	/* border: solid red 1px; */
 	display: flex;
 	flex-direction: column;
+	/* justify-content: center; */
 	justify-content: flex-start;
 	align-items: center;
 	position: relative;
@@ -139,7 +146,7 @@ a.link__page:hover {
 #bounce__phrase {
 	/* border: solid red 1px; */
 	padding-top: 7%;
-
+	/* color: rgb(255, 255, 255, 0.7); */
 	position: absolute;
 	margin: 0 auto;
 	font-family: "marigold", sans-serif;
@@ -147,11 +154,20 @@ a.link__page:hover {
 	font-size: x-large;
 	animation: smith-cj 3000ms ease-in-out 1000ms infinite;
 }
+/**/
+img.header__image {
+	object-fit: contain;
+	border-radius: 100%;
+	width: 96px;
+	height: 96px;
+	object-position: initial;
+	display: block;
+}
 @media only screen and (min-width: 600px) {
 	body {
-		max-width: 1600px;
+		/* max-width: 1600px; */
 	}
-	.all__body {
+	.all__body__index {
 		/* border: solid red 1px; */
 		width: 100%;
 		/* height: 100%; */
@@ -164,13 +180,7 @@ a.link__page:hover {
 		align-items: center;
 		justify-content: center;
 	}
-	.smith__name {
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-start;
-		align-items: center;
-		position: relative;
-	}
+
 	#fond__acceuil {
 		object-fit: contain;
 		/* border: solid red 1px; */
