--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,7 @@ img.header__image {
 
 	#fond__acceuil {
 		object-fit: contain;
-		border: solid red 1px;
+		/* border: solid red 1px; */
 		width: 500px;
 		height: 500px;
 		overflow: hidden;
