--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,14 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
+.freeze_page {
+	overflow-y: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 .darken {
 	position: fixed;
 	top: 0;
@@ -50,7 +57,6 @@ body {
 
 #menu-hamburger {
 	height: 100%;
-	/* border: solid red 1px; */
 	width: 220px;
 	position: absolute;
 	left: 0;
@@ -73,6 +79,7 @@ body {
 .icon_div {
 	position: fixed;
 	z-index: 999;
+	left: 4px;
 }
 #link__menu {
 	margin-top: 40px;
