--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	border: solid red 1px;
 }
 .darken {
 	position: fixed;
@@ -61,6 +62,7 @@ body {
 	position: absolute;
 	left: 0;
 	top: 0;
+	overflow: hidden;
 }
 #myLinks {
 	display: none;
